--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -16,3 +16,5 @@ ribbon.ConnetTimeout=3000
 #hystris的超时时间
 hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds=5000
+#自己的自定义配置
+qfshop.securite=suibian,doukeyi
