--- a/qf-shop-test.properties
+++ b/qf-shop-test.properties
@@ -17,6 +17,6 @@ ribbon.ConnetTimeout=3000
 hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds=5000
 #自己的自定义配置
-qfshop.securite=qijiakun6666666
+qfshop.securite=UZI666
 #开启动态刷新的配置
 management.endpoints.web.exposure.include=refresh
