--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -18,3 +18,5 @@ hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds=5000
 #自己的自定义配置
 qfshop.securite=suibian,doukeyi
+#这是es的配置信息
+springcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
