--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -20,3 +20,5 @@ hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds
 qfshop.securite=suibian,doukeyi
 #这是es的配置信息
 springcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
+#索引库名称
+es.index=qf-shop
