--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -1,6 +1,6 @@
 #数据库的配置信息
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.password=123456
 spring.datasource.username=root
 #redis的配置信息
